--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <title>Movie List</title>
 </head>
@@ -21,12 +25,12 @@
             <input type="search" name="search-movie" id="search-movie">
             <input type="button" value="Search">
         </div>
-
         <div class="card-container" id="card-container">
             
         </div>
     </section>
     
+    <footer>Developed by Felix Fernando for GDSC</footer>
     <script src="script.js"></script>
 </body>
 </html>
