--- a/index.html
+++ b/index.html
@@ -6,31 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Movie List</title>
+    <title>Rotten Potatoes - Movie</title>
 </head>
 <body>
-    <img src="img/popcorn.png" alt="" class="popcorn">
-    <div class="title">
-        <h1>Selamat Datang di <span style="color: #d62503;">Movie</span> <span style="color: #FFE812;">List</span> </h1>
-        <h3>Cari Movie dengan Mudah dan Praktis</h3>
-    </div>
-    <section class="movie">
-        <div class="search">
-            <input type="search" name="search-movie" id="search-movie">
-            <input type="button" value="Search">
+    <nav>
+        <div class="nav-container">
+            <a href="/"><img src="/img/logo-white.png" alt=""></a>
+            <input type="text" name="search-movie" class="search-bar" placeholder="Search Movie, TV Show, or Series">
+            <ul class="nav-list">
+                <li><a href="/">Movie</a></li>
+                <li><a href="https://github.com/FelixFern/">Github</a></li>
+            </ul>
         </div>
-        <div class="card-container" id="card-container">
+    </nav>
+    <div class="content">
+        <div class="header">
+            <div class="brown-vertical-line"></div>
+            <h1>Movie List</h1>
+            <div class="toggle">
+                <button id="grid" class="current-toggle" onclick="gridView()"><i class="im im-copy"></i></button>
+                <button id="list" onclick="listView()"><i class="im im-menu"></i></button>
+            </div>
+        </div>
+        <div class="movie-container" id="movie-container">
             
         </div>
-    </section>
-    
-    <footer>Developed by Felix Fernando for GDSC</footer>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
