Added Search Function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <nav>
         <div class="nav-container">
             <a href="/"><img src="/img/logo-white.png" alt=""></a>
-            <input type="text" name="search-movie" class="search-bar" placeholder="Search Movie, TV Show, or Series">
+            <input type="text" name="search-movie" class="search-bar" id="search-bar" placeholder="Search Movie, TV Show, or Series">
+            <button class="search_button" onclick="searchMovie()"><i class="im im-magnifier"></i></button>
             <ul class="nav-list">
                 <li><a href="/">Movie</a></li>
                 <li><a href="https://github.com/FelixFern/">Github</a></li>
