--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <nav>
         <div class="nav-container">
             <a href="/"><img src="/img/logo-white.png" alt=""></a>
-            <input type="text" name="search-movie" class="search-bar" id="search-bar" placeholder="Search Movie, TV Show, or Series">
-            <button class="search_button" onclick="searchMovie()"><i class="im im-magnifier"></i></button>
+            <div class="search_component">
+                <input type="text" name="search-movie" class="search-bar" id="search-bar" placeholder="Search Movie, TV Show, or Series">
+                <button class="search_button" onclick="searchMovie()"><i class="im im-magnifier"></i></button>
+            </div>
             <ul class="nav-list">
                 <li><a href="/">Movie</a></li>
                 <li><a href="https://github.com/FelixFern/">Github</a></li>
