--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
     <nav>
         <div class="nav-container">
             <a href="/"><img src="/img/logo-white.png" alt=""></a>
-            <div class="search_component">
-                <input type="text" name="search-movie" class="search-bar" id="search-bar" placeholder="Search Movie, TV Show, or Series">
-                <button class="search_button" onclick="searchMovie()"><i class="im im-magnifier"></i></button>
-            </div>
+            <input type="text" name="search-movie" class="search-bar" id="search-bar" placeholder="Search Movie, TV Show, or Series">
             <ul class="nav-list">
                 <li><a href="/">Movie</a></li>
                 <li><a href="https://github.com/FelixFern/">Github</a></li>
@@ -39,7 +36,24 @@
             </div>
         </div>
         <div class="movie-container" id="movie-container">
-            
+        </div>
+    </div>
+    <div class="popup" id="popup">
+        <div class="popup-content">
+            <div class="left-side-popup">
+                <img src="img/poster-test.jpg" alt="">
+            </div>
+            <div class="right-side-popup">
+                <div id="${counter}" class="rating">
+                    <img id="${counter}" src="img/potato.png" alt="">
+                    <p id="${counter}">69 %</p>
+                </div>
+                <h2 id="${counter}">Movie Title</h2>
+                <p id="${counter}">Language : en</p>
+                <p id="${counter}" class="overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a justo neque. Suspendisse id eros non felis condimentum tristique. Curabitur aliquam elit nec nulla vehicula vestibulum. Phasellus vel nisi in mauris placerat suscipit sed ut est. Fusce eget vehicula odio, eget venenatis purus. Maecenas non lacus erat. Maecenas blandit ultrices ante.</p>
+                <p id="${counter}">Release Date : ${release_date}</p>
+                <button class="back-button" onclick="closePopup()">Back</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
