--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav>
         <div class="nav-container">
-            <a href="#"><img src="felixfern.github.io/rotten_potatoes/img/logo-white.png" alt=""></a>
+            <a href="#"><img src="img/logo-white.png" alt=""></a>
             <input type="text" name="search-movie" class="search-bar" id="search-bar" placeholder="Search Movie, TV Show, or Series">
             <ul class="nav-list">
                 <li><a href="#">Movie</a></li>
